<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/difficulty_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="8dp"
        android:textColor="@color/colorText"
        android:text="@string/easy"/>

    <Button
        android:id="@+id/difficulty_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:textColor="@color/colorText"
        android:background="@drawable/button_background"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="8dp"/>

    <Button
        android:id="@+id/difficulty_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        android:textColor="@color/colorText"
        android:background="@drawable/button_background"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="8dp"/>

</LinearLayout>