<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Personalization"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_back" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_signout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_back">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutSound"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <ImageView
                    android:id="@+id/img_sound"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_sound"
                    app:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/txt_sound"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="Sound Effect enabled"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutVibration"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_vibration"
                    app:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/txt_vibration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="Vibration Effect enabled"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutLeaderBoard"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_leaderboard"
                    app:tint="@color/colorAccent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="Check Leaderboard"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="More Options"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/linearLayoutShare"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_share"
                    app:tint="@color/colorAccent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/share_app"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/linearLayoutRate"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_rate"
                    app:tint="@color/colorAccent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/rate_app"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:id="@+id/linearLayoutMoreApps"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_more_apps"
                    app:tint="@color/colorAccent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/view_more_apps"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/linearLayoutFeedback"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_feedback"
                    app:tint="@color/colorAccent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/send_feedback"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:id="@+id/linearLayoutPrivacyPolicy"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_policy"
                    app:tint="@color/colorAccent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_signout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button"
        android:text="Sign Out"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>